# Python_TelegramBot_semenov

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  secrets.py  str.mmd  telegram-bot.py
app/: bot.py  main.py
app/admin/: authentication.py  main.py  views.py
app/bot/: Dockerfile  admin.py  docker-compose.yml  models.py  requirements.txt  serializers.py  urls.py  views.py
app/core/order/: constants.py  exceptions.py  models.py  repositories.py  services.py
app/core/users/: constants.py  models.py  repositories.py  services.py
app/handlers/: __init__.py  commands.py  filters.py  helpers.py  waiter_commands.py
app/infra/postgres/: db.py
app/jobs/: sync_roles.py
bot/: bot.py  database.py  handlers.py  main.py  requirements.txt  secret.py  secrets.py
bot/handlers/: admin.py  calendar.py  common.py
bot/models/: models.py
bot/utils/: calendar_utils.py  database.py  db_operations.py
django_app/: docker-compose.yml  manage.py  requirements.txt
django_app/app/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
django_app/app/tests/: test_integration.py  test_models.py  test_views.py
my_django_project/: manage.py
my_django_project/my_django_project/: asgi.py  settings.py  wsgi.py
my_django_project/static/css/: styles.css
my_django_project/static/js/: scripts.js
orders/: admin.py  models.py  serializers.py  tests.py
settings/: config.py
static/css/: styles.css
static/js/: scripts.js
templates/admin/: base_site.html
(+1 files in other folders)
